# MyExtension

./: CMakeLists.txt
MyCLI/: CMakeLists.txt  MyCLI.xml
MyScripted/: .MyScripted.py.swp  CMakeLists.txt  MyScripted.py
